infra/k8s-dev/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: squawk.dev
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
          - path: /api/gateway/?(.*)
            backend:
              serviceName: gateway-srv
              servicePort: 3000
          - path: /api/orgs/?(.*)
            backend:
              serviceName: organizations-srv
              servicePort: 3000
          - path: /api/comments/?(.*)
            backend:
              serviceName: comments-srv
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
